fix test compilation
23/103 failing